<resources>
    <string name="app_name">MyModernist</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Сведения</string>
    <string name="artists">Художники</string>
    <string name="seeMore">Читать далее</string>
    <string name="z">В 1913 году в журнале Vogue  появилась статья о сотрудничестве Бакста с французским модным домом Жанны Пакен.
                            В журнале была фотография одной из самых богатых женщин Америки  — Гертруды Вандербильт Уитни в костюме, сшитом по эскизу Бакста.
                            Это безусловно стало эффективной рекламой его творений.</string>
    <string name="textLeo">"""Леон Бакст родился в 1866 году в Гродно в еврейской семье. При рождении его назвали Лейб-Хаим Розенберг. Когда семья переехала в столицу, мальчик часто гостил у своего деда, модного портного — в старинной изысканной квартире в самом центре Петербурга."""</string>
    <string name="textNextLeo">"""Леон Бакст родился в 1866 году в Гродно в еврейской семье. При рождении его назвали Лейб-Хаим Розенберг. Когда семья переехала в столицу, мальчик часто гостил у своего деда, модного портного — в старинной изысканной квартире в самом центре Петербурга. Леон Бакст много читал, ставил детские кукольные постановки и слушал рассказы родителей и деда о театре. С детства Бакст увлекался и рисованием. Отец показал его рисунки скульптору Марку Антокольскому, и тот посоветовал мальчику учиться живописи.

Леон Бакст поступил вольнослушателем в Академию художеств, но не окончил ее. Он брал уроки у Александра Бенуа и подрабатывал, создавая иллюстрации для детских книг. На первой выставке своих работ в 1889 году Лейб-Хаим Розенберг взял себе псевдоним Леон Бакст."""</string>
    <string name="rulesName">Правила использования приложения</string>
    <string name="rules">После регистрации зайдите в главное меню, выберите художника, нажав на его изображение.</string>
    <string name="rules2">Далее в информационном окне будут указаны данные о деятеле: </string>
    <string name="rules3">Для выхода из информационного окна на главную страницу, следует нажать на кнопку «Назад». </string>
    <string name="modern1">Модернизм — это больше, чем художественное направление. Это целый комплекс изменений и процессов, происходивших в культуре, изобразительном искусстве, литературе, архитектуре во второй половине XIX — первой половине XX века. Среди главных исторических предпосылок этой революции в искусстве были развитие городов, индустриализация и две мировые войны — процессы и события, затронувшие весь мир.</string>
    <string name="modern2">"""Хронологические рамки модернизма чаще всего не вызывают сомнений и варьируются в разных исследования незначительно: одни настаивают на том, что уже с реализма Гюстава Курбе начались необратимые перемены, другие ведут отсчет от Салона отверженных, который состоялся в 1863 году и на котором появилась картина Эдуара Мане «Завтрак на траве». Как бы то ни было, в одном сходятся и те, и другие — модернизм начался во Франции.

Когда говорят о модернизме или современном искусстве (modern art), всегда подразумевают множество художественных движений и стилей, объединений и направлений, которые существовали часто одновременно и во многом оказывались противниками и оппонентами. На первый взгляд, сложно отыскать общие черты в искусстве сюрреалистов и экспрессионистов, кубистов и конструктивистов. Но начиная с французского импрессионизма и заканчивая американским абстрактным экспрессионизмом, художники забрались в ту систему координат, ту область поисков, которая резко отделила их от всех предыдущих поколений. С началом модернизма закончилась эпоха изобразительных традиций Возрождения. Клод Моне. Руанский собор вечером, 1894 Василий Кандинский. Композици"""</string>
    <string name="modern3">1. Есть спорная, но достаточно веская причина начинать модернизм именно с реализма Гюстава Курбе. Пока он не начал писать крестьянок с грязными пятками, набор мотивов и сюжетов, достойных высокого искусства, едва ли значительно расширялся со времен Рафаэля. Библейские события, античная мифология, героические батальные сцены, пасторальные или драматические пейзажи — все эти сюжеты заведомо могли рассчитывать на гриф парижского Салона, а их создатели — на безбедную сытую жизнь салонного художника. 350 лет методичного служения идеалам Рафаэля привели к тому, что Венер и римских патрициев на салонных стенах ежегодно оказывалось больше, чем изображений современной жизни. И за дерзость написать обнаженную натуру на скандально большом холсте, не наделяя ее божественным именем, нужно благодарить как раз Курбе.</string>
    <string name="modern4">"""2. Но, конечно, самым очевидным и гораздо более смелым пророком современного искусства стал Эдуар Мане. Мало того, что он поневоле предводительствовал в целой группе художников, которых позже назовут импрессионистами, он заложил основы нового восприятия живописи. Он сместил фокус с содержания картины на методы и процесс изображения: формы, линии, цвет, умышленно искаженная перспектива. Возмущенные критики ему первому ставили в укор, что продукты на столе он пишет рядом не потому, что они сочетаются для конкретного приема пищи, а потому, что их цвета отлично гармонируют.

3. Мане, кроме того, заставил беспокоиться зрителя, до сих пор совершенно удобно ощущавшего себя центром взаимодействия с картиной. Это он, зритель, раньше был главный, а от его уверенного взгляда художник выстроил правильную перспективу, не вызывающую головокружения или смеха. Мане играет со зрителем: в «Олимпии» зритель ощущает себя клиентом перед постелью проститутки, в «Казни императора Максимилиана» — тем самым равнодушным наблюдателем, тень от фигуры которого ложится на передний план картины, в «Баре в Фоли-Бержер» — посетителем перед барной стойкой. Сезанн пойдет еще дальше — и будет писать натюрморты так, словно смотрел на них сразу с нескольких точек зрения. Кубисты доведут этот способ изображения до предела — и безусловная позиция всегда правого зрителя основательно пошатнется."""</string>
    <string name="moder5">"""4. Несмотря на острые конфликты и несхожесть художественных движений, которые принято относить к модернизму, для каждого из них характерна одна общая черта: эксперименты и находки в области формы, цвета, техники. Начиная с Мане и заканчивая абстрактными экспрессионистами — все художники-модернисты сосредоточены на живописи и материале больше, чем на сюжете. От импрессионистских раздельных мазков и фиолетовых теней и дивизионизма Сёра, до чистой абстракции Кандинского, супрематических композиций Малевича, живописи цветового поля Ротко. Картина обладает собственной живописной ценностью, не связанной с ценностью изображенного сюжета. Ренуар говорил: «Самым важным в нашем движении я считаю то, что мы освободили живопись от сюжетов. Я волен писать цветы и называть их попросту „цветами“, без того, чтобы у них была своя история».

5. И все же та часть художественных движений, которая при всей страсти к экспериментам держалась за фигуративную живопись, не уходя в абстракцию, легализовала в искусстве множество сюжетов, до сих пор запретных и недостойных священных стен галерей. Это были и импрессионисты, и фовисты, и набиды, и экспрессионисты, и лондонская школа. В городских пейзажах, например, стали появляться железнодорожные мосты, инженерные конструкции и даже ремонтные работы. Более того, пейзаж стал вполне полноправным жанром — для какого-нибудь пруда в тихом уголке сада художник теперь берет громадное полотно, раньше позволенное только исторической или мифологической живописи. Но одна из важнейших перемен произошла в изображении обнаженной женской натуры. «В этом отношении, как и во многих других, — пишет Джон Берджер в книге „Искусство видеть“, — поворотной фигурой был Мане. Если сравнивать его „Олимпию“ с оригиналом Тициана, то увидишь женщину, исполняющую традиционную роль, но исполняющую ее уже с некоторым вызовом». А дальше — купающиеся женщины Дега, бесконечные изображения обнаженной в ванной в серии Боннара, проститутки Тулуз-Лотрека и Пикассо. Женщина перестала быть соблазнительным объектом созерцания, чей взгляд всегда направлен в сторону зрителя-мужчины."""</string>
    <string name="DaliFrade1">Теории Фрейда захватывали Сальвадора Дали, пожалуй, до одержимости. Самым большим желанием молодого художника было познакомиться со своим кумиром. Их единственная встреча состоялась в Лондоне в 1938 году. Этой зимой венский Бельведер открывает всеобъемлющую экспозицию «Дали — Фрейд. Одержимость», которая иллюстрирует увлечение сюрреалистов психоаналитическим подходом и его присутствие в живописном мире Дали.</string>
    <string name="DaliFrade2">"""Дали прочитал «Толкование сновидений», когда учился в Мадриде в начале 1920-х годов. Он писал, что это стало «одним из важнейших открытий в моей жизни, и я был охвачен настоящим пороком самоинтерпретации не только своих снов, но и всего, что со мной происходило». В трудах Фрейда Дали нашел ключ к скрытым страхам и желаниям. В результате он начал изучать поэтику сюрреализма в 1926 году и разработал новый визуальный язык, который по сей день делает уникальными его работы.

Эта страсть приняла не только визуальную форму. В 1933 году Дали написал «психоаналитическое эссе», как он сам его назвал, о знаменитой картине Жана-Франсуа Милле «Анжелюс». Это сочинение он взял на свою встречу с Фрейдом в 1938 году — вместе с недавно законченной картиной «Метаморфозы Нарцисса», которой на тот момент владел английский аристократ, поэт и коллекционер Эдвард Джеймс."""</string>
    <string name="DaliFrade3">"""Это была уже не первая попытка художника познакомиться со своим идолом. Прежде он ездил с этой целью в Вену, но безрезультатно. Теперь же психоаналитик бежал в Лондон, спасаясь от нацистов, аннексировавших его родную Австрию. Встретиться с Дали его уговорил близкий друг, писатель Стефан Цвейг, который написал Фрейду, что молодой живописец «будет последним… самый верным, самым благодарным из ваших учеников среди художников».

Наконец, 19 июля 1938 года Дали и Цвейг, прихватив Эдварда Джеймса (скорее всего, как приложение к «Метаморфозам Нарцисса»), пришли в дом Зигмунда Фрейда. К разочарованию художника, встреча прошла совсем не так, как он предполагал. Дали надеялся с помощью картины и эссе об «Анжелюсе» вовлечь психоаналитика в беседу о собственном параноидально-критическом методе. Однако хозяин, который страдал конечной стадией рака ротовой полости, предпочитал молчать. Первое, что он сказал после того, как некоторое время смотрел на своего активного гостя, было адресовано Цвейгу: «Я никогда не видел более полного примера испанца. Каков фанатик!»."""</string>
    <string name="DaliFrade4">"""Всё же Дали удалось вовлечь Фрейда в некое подобие общения. Учёный сказал, что предпочитает старых мастеров вроде Леонардо да Винчи, но если обычно в живописи скрыта «бессознательная идея», то у Дали он пытается найти «сознательное». Впоследствии в письме Цвейгу психоаналитик похвалил «молодого испанца с искренними и фанатичными глазами и неоспоримым техническим мастерством» и признался, что тот «заставил меня изменить мнение о сюрреалистах». По словам Фрейда, прежде он склонен был смотреть на них как на абсолютных чудаков, в 95% случаев — обычных алкоголиков, и был очень удивлён, что они выбрали его «своим покровителем».

Во время визита Дали было позволено сделать несколько набросков Фрейда, и он изобразил череп учёного в виде улитки."""</string>
</resources>