<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaliFradeActivity">

    <Button
        android:id="@+id/button2"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        app:icon="@drawable/free_icon_arrow_left_9847479"
        app:iconGravity="textStart"
        app:iconPadding="5sp"
        app:iconSize="35dp"
        app:iconTint="#BF9C9C9C"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="370dp"
        android:layout_height="694dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLeo2"
                android:layout_width="wrap_content"
                android:layout_height="279dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/DaliFrade1"
                android:textAlignment="viewStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="263dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="232dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/_588091" />

            </FrameLayout>

            <TextView
                android:id="@+id/textLeo9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/DaliFrade2"
                android:textAlignment="textStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView161"
                    android:layout_width="match_parent"
                    android:layout_height="232dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/_18377" />

            </FrameLayout>

            <TextView
                android:id="@+id/textLeo12"
                android:layout_width="wrap_content"
                android:layout_height="722dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/DaliFrade3"
                android:textAlignment="viewStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="327dp">

                <ImageView
                    android:id="@+id/imageView36"
                    android:layout_width="370dp"
                    android:layout_height="293dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/_587957" />

            </FrameLayout>

            <TextView
                android:id="@+id/textLeo7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/DaliFrade4"
                android:textAlignment="viewStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>