<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModernismActivity">

    <Button
        android:id="@+id/button9"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        app:icon="@drawable/free_icon_arrow_left_9847479"
        app:iconGravity="textStart"
        app:iconPadding="5sp"
        app:iconSize="35dp"
        app:iconTint="#BF9C9C9C"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="370dp"
        android:layout_height="694dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textLeo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/modern1"
                android:textAlignment="viewStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="274dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="232dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/_25253" />

            </FrameLayout>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginStart="5dp"
                android:fontFamily="serif"
                android:text="Место и время"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#E6534C4C"
                android:textSize="22sp"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textLeo9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/modern2"
                android:textAlignment="textStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="362dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="370dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="241dp"
                        android:layout_height="370dp"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="220dp"
                            android:layout_height="290dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/_74749" />

                        <TextView
                            android:id="@+id/textView30"
                            android:layout_width="170dp"
                            android:layout_height="41dp"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="295dp"
                            android:fontFamily="serif"
                            android:text="Василий Кандинский. Композиция
                            1941"
                            android:textAlignment="center"
                            android:textColor="#99534C4C"
                            android:textSize="12sp" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="220dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="154dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="305dp"
                            android:fontFamily="serif"
                            android:text="Клод Моне. Руанский собор вечером
                            1894"
                            android:textAlignment="center"
                            android:textColor="#99534C4C"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="210dp"
                            android:layout_height="290dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:src="@drawable/_21187" />

                    </FrameLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:text="Ключевые моменты"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#E6534C4C"
                android:textSize="22sp"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/textLeo12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/modern3"
                android:textAlignment="viewStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="367dp">

                <ImageView
                    android:id="@+id/imageView36"
                    android:layout_width="370dp"
                    android:layout_height="293dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/_76506" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="150dp"
                    android:fontFamily="serif"
                    android:text="Завтрак в мастерской
                    Эдуар Мане
                    1868"
                    android:textAlignment="center"
                    android:textColor="#99534C4C"
                    android:textSize="12sp" />

            </FrameLayout>

            <TextView
                android:id="@+id/textLeo7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/modern4"
                android:textAlignment="viewStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="220dp"
                    android:layout_height="290dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/_44579" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="150dp"
                    android:fontFamily="serif"
                    android:text="Жорж Сёра. Женщина с зонтиком
                    1884"
                    android:textAlignment="center"
                    android:textColor="#99534C4C"
                    android:textSize="12sp" />

            </FrameLayout>

            <TextView
                android:id="@+id/textLeo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/moder5"
                android:textAlignment="viewStart"
                android:textColor="#E6534C4C"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>